# attn

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  release.yml
config/: default.toml  runtime.toml
config/apps/: chat.txt  coding.txt  design.txt  games.txt  media.txt  music.txt  productivity.txt  terminal.txt  video.txt
config/domains/: ai.txt  chat.txt  coding.txt  design.txt  devops.txt  email.txt  finance.txt  food.txt  health.txt  learning.txt  meeting.txt  music.txt  news.txt  productivity.txt  read_later.txt  reference.txt  scroll.txt  search.txt  shopping.txt  sports.txt  storage.txt  travel.txt  video.txt
docs/: 2026-05-15-v0.2-feature-batch.md
docs/templates/: implementation-plan-template.md  implementation-plan-workflow.md
quickshell/: AttnIndicator.qml  AttnPopup.qml  AttnRow.qml
scripts/: install.sh
src/: main.rs  notifications.rs
src/browsers/: chromium.rs  firefox.rs  mod.rs
src/focus/: hyprland.rs  mod.rs  niri.rs  wlr_toplevel.rs
tools/: sync-default-config.sh
